--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 200vw;
   overflow-x: hidden;
 }
 
@@ -22,6 +22,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 * {
@@ -40,3 +41,6 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
